@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-23T01:45:10Z",
-  "count" : 5,
+  "timestamp" : "2022-11-05T08:19:06Z",
+  "count" : 3,
   "count_minmax" : [ 1, 5 ],
-  "count_decinc" : [ -0, +5 ],
-  "uniques" : 3,
+  "count_decinc" : [ -2, +5 ],
+  "uniques" : 2,
   "uniques_minmax" : [ 1, 3 ],
-  "uniques_decinc" : [ -0, +3 ]
+  "uniques_decinc" : [ -1, +3 ]
 }
