@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-11-05T01:23:49Z",
+  "timestamp" : "2022-11-05T08:19:06Z",
   "count_outdated" : 634,
   "uniques_outdated" : 362,
-  "count" : 666,
-  "uniques" : 379,
+  "count" : 664,
+  "uniques" : 378,
   "clones" : [
     {
       "timestamp": "2022-10-22T00:00:00Z",
-      "count": 5,
+      "count": 3,
       "count_minmax": [ 1, 5 ],
-      "uniques": 3,
+      "uniques": 2,
       "uniques_minmax": [ 1, 3 ]
     },
     {
