@@ -1,11 +1,11 @@
 {
-  "count": 32,
-  "uniques": 6,
+  "count": 30,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-10-22T00:00:00Z",
-      "count": 5,
-      "uniques": 3
+      "count": 3,
+      "uniques": 2
     },
     {
       "timestamp": "2022-10-23T00:00:00Z",
