@@ -1,3 +1,11 @@
+2022-11-05T08:19:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3399334030 # 1000
+* notice: last 14d: unq all: 5 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 362 634 / 379 666
+* notice: next accum: outdated-unq outdated-all / unq all: 362 634 / 378 664
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -2 / +3 +5 -1 -2 / 2 3
+* notice: removed / changed dates: [] / [2022-10-22]
+
 2022-11-05T01:23:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3398143510 # 999
 * notice: last 14d: unq all: 6 32
